<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Japanese Traditional Time</string>
    <string name="abbr_app_name">JTT</string>
    <string name="auto_lat_long">Use current location</string>
    <string name="location">Location</string>
    <string name="location_ex">Change stored location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="not_impl">Not implemented yet</string>
    <string name="clock">Clock</string>
    <string name="alarm">Alarm</string>
    <string name="settings">Settings</string>
    <string name="srv_fail">Service killed</string>
    <string name="srv_fail_ex">Touch to restart the service.</string>
    <string name="bootup">Start on bootup</string>
    <string name="bootup_ex">Start the service automatically when the device is turned on.</string>
    <string name="notify">Display notifications</string>
    <string name="notify_ex">Display current hour glyph in status bar.</string>
    <string name="status">Startup and notifications</string>
    <string name="stop">Stop service</string>
    <string name="stop_ex">Tap to stop service and close application.</string>
    <string name="stop_ask">This will stop service and close the application. The service will be restarted when application is started again. Continue?</string>
    <string name="today">Today</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="midday">Midday</string>
    <string name="midnight">Midnight</string>
    <string name="day_prev">Yesterday</string>
    <string name="day_curr">Today</string>
    <string name="day_next">Tomorrow</string>
    <plurals name="days_past">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="days_future">
        <item quantity="one">In %d day</item>
        <item quantity="other">In %d days</item>
    </plurals>
    
    <string name="cock">The Cock</string>
    <string name="dog">The Dog</string>
    <string name="boar">The Boar</string>
    <string name="rat">The Rat</string>
    <string name="ox">The Ox</string>
    <string name="tiger">The Tiger</string>
    <string name="hare">The Hare</string>
    <string name="dragon">The Dragon</string>
    <string name="serpent">The Serpent</string>
    <string name="horse">The Horse</string>
    <string name="ram">The Ram</string>
    <string name="monkey">The Monkey</string>
    <string name="hour_of_cock">Hour of the Cock</string>
    <string name="hour_of_dog">Hour of the Dog</string>
    <string name="hour_of_boar">Hour of the Boar</string>
    <string name="hour_of_rat">Hour of the Rat</string>
    <string name="hour_of_ox">Hour of the Ox</string>
    <string name="hour_of_tiger">Hour of the Tiger</string>
    <string name="hour_of_hare">Hour of the Hare</string>
    <string name="hour_of_dragon">Hour of the Dragon</string>
    <string name="hour_of_serpent">Hour of the Serpent</string>
    <string name="hour_of_horse">Hour of the Horse</string>
    <string name="hour_of_ram">Hour of the Ram</string>
    <string name="hour_of_monkey">Hour of the Monkey</string>

    <string name="appearance">Look and feel</string>
    <string name="no_providers">No location providers found. Please enable GPS.</string>
    <string name="widget1">JTT: Single hour</string>
    <string name="widget12">JTT: Clock</string>
    <string name="widget_invert">Invert widget text color</string>
    <string name="widget_invert_ex">Use white text with black border</string>
</resources>
