<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:key="jtt_bootup"
        android:title="@string/bootup"
        android:summary="@string/bootup_ex"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="jtt_notify"
        android:title="@string/notify"
        android:summary="@string/notify_ex"
        android:defaultValue="true" />
    <PreferenceCategory
            android:title="@string/location">
		<CheckBoxPreference
                android:key="jtt_auto_loc"
                android:title="@string/auto_lat_long" />
        <EditTextPreference
                android:key="jtt_lat"
                android:numeric="signed|decimal"
                android:title="@string/latitude" />
        <EditTextPreference
                android:key="jtt_lon"
                android:numeric="signed|decimal"
                android:title="@string/longitude" />
    </PreferenceCategory>
</PreferenceScreen>